src/index.scss
@use "./styles" as *;

html, body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1.025vw;
  line-height: 1.2;

  @media screen and (max-device-width: 1025px){
    font-size: 1.5vw;
  }

  @media screen and (max-device-width: 769px){
    font-size: 2.2vw;
  }

  @media screen and (max-device-width: 481px){
    font-size: 2.7vw;
  }
}

h1,h2,h3, h4, h5, h6 {
  margin: 0;
  padding: 0;
  line-height: 1.2;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

.app {
  @include commonBlock($justify: center);
  min-height: 100vh;
  padding: 0 25%;
  background: url("./image/lake.jpg") center no-repeat;

  @media screen and (max-device-width: 769px){
    padding: 0 15%;
  }

  @media screen and (max-device-width: 481px){
    padding: 0 5%;
  }

}
  .container {
    @include commonBlock;
    background-color: $standartBackgroundColor;
    border-radius: 30px;
    color: $standartFontColor;
    padding: 5%;
    min-height: 85vh;
  }

  .header {
    @include commonBlock;
    margin: 0 0 2em 0;

    &__title {
      font-size: 1.8em;
      text-shadow: 0px 0px 7px #104DCE;
    }
  }

  .main {
    @include commonBlock($justify:flex-start);
    flex: 1 1 auto;
    gap: 2em;
    margin: 0 0 2em 0;
  }


  .main__central {
    @include commonBlock;
    gap: 2em;

    @media screen and (max-device-width: 481px){
      gap: 6em;
    }
  }


  .footer{
    @include commonBlock($direction: row, $justify: center);
    font-size: 0.8em;
  }

